--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit==1.22.0
-pandas==2.0.2
-matplotlib==3.7.1
-seaborn==0.12.2
-pickle-mixin==1.0.2
-numpy==1.24.2
-gensim==4.1.2
-scipy==1.7.3
-scikit-learn==1.3.0
-underthesea==1.1.4
+streamlit
+pandas
+matplotlib
+seaborn
+pickle
+numpy
+gensim
+scipy
+scikit-learn
+underthesea
